--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styels/style.css">
-    <title>Second assignment</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>second assignment</title>
 </head>
+
 <body>
     <header>
-        <nav>
-             
-        </nav>
+        <section class="">
+            <nav class="display-flex navbar">
+                <div class="logo">
+                    <img src="./assets/logo.png" alt="">
+
+                </div>
+
+                <ul class="nav-links">
+                    <li><a class="primary-color2 nav-btn ">Home</a></li>
+                    <li><a class="primary-color1 shop ">Shop</a></li>
+                    <li><a class="primary-color1 about">About us </a></li>
+                    <li><a class="cart-btn" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+                </ul>
+
+            </nav>
+        </section>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
 </body>
+
 </html>
