--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
                     <li><a class="primary-color1 about">About us </a></li>
                     <li><a class="cart-btn" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
                 </ul>
-
             </nav>
         </section>
+           <section class="banner-grid">
+    <div class="text">
+      <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span></h1>
+      <p>
+        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
+      </p>
+    </div>
+    <div class="image">
+      <img src="./assets/hero-flower.png" alt="Fresh Flowers" />
+    </div>
+  </section>
     </header>
 </body>
 
