added a card section and made it responsive

--- a/index.html
+++ b/index.html
@@ -2,44 +2,105 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styels/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>second assignment</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styels/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>second assignment</title>
 </head>
 
 <body>
-    <header>
-        <section class="">
-            <nav class="display-flex navbar">
-                <div class="logo">
-                    <img src="./assets/logo.png" alt="">
+  <header>
+    <section class="">
+      <nav class="display-flex navbar">
+        <div class="logo">
+          <img src="./assets/logo.png" alt="">
 
-                </div>
+        </div>
 
-                <ul class="nav-links">
-                    <li><a class="primary-color2 nav-btn ">Home</a></li>
-                    <li><a class="primary-color1 shop ">Shop</a></li>
-                    <li><a class="primary-color1 about">About us </a></li>
-                    <li><a class="cart-btn" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
-                </ul>
-            </nav>
-        </section>
-           <section class="banner-grid">
-    <div class="text">
-      <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span></h1>
-      <p>
-        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
-      </p>
-    </div>
-    <div class="image">
-      <img src="./assets/hero-flower.png" alt="Fresh Flowers" />
-    </div>
-  </section>
-    </header>
+        <ul class="nav-links">
+          <li><a class="primary-color2 nav-btn ">Home</a></li>
+          <li><a class="primary-color1 shop ">Shop</a></li>
+          <li><a class="primary-color1 about">About us </a></li>
+          <li><a class="cart-btn" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+        </ul>
+      </nav>
+    </section>
+    <section class="banner-grid">
+      <div class="text">
+        <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span>
+        </h1>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
+        </p>
+      </div>
+      <div class="image">
+        <img src="./assets/hero-flower.png" alt="Fresh Flowers" />
+      </div>
+    </section>
+  </header>
+  <main>
+    <section class="card-section">
+      <h1><span class="orange">Our</span> Plants</h1>
+      <p class="card-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+        classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <div class="card-div"> 
+        <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3 class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3 class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+         </div>
+         </div>
+    </section>
+
+  </main>
 </body>
 
 </html>
