--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </header>
   <main>
     <section class="card-section">
-      <h1><span class="orange">Our</span> Plants</h1>
+      <h1 id="section-title"><span class="orange">Our</span> Plants</h1>
       <p class="card-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
         classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="card-div"> 
