added the join section and footer section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="text">
         <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span>
         </h1>
-        <p>
+        <p class="color2">
           Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
           blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
         </p>
@@ -45,62 +45,132 @@
   <main>
     <section class="card-section">
       <h1 id="section-title"><span class="orange">Our</span> Plants</h1>
-      <p class="card-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+      <p class="card-description color2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
         classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-        <div class="card-div"> 
+      <div class="card-div">
         <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
+        </div>
+        <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
+        </div>
+        <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
+        </div>
+        <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
+        </div>
+        <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
+        </div>
+        <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-hedding">Lily Blossom</h3>
           <h3 class="card-price">20 USD</h3>
-          
-          <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
-          <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
-          <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         <div class="card">
-          <img src="./assets/sample-flower-image.png" alt="">
-          <h3  class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
-          <button class="card-btn btn-color">ADD TO CART</button>
-         </div>
-         </div>
-    </section>
 
+          <button class="card-btn btn-color">ADD TO CART</button>
+        </div>
+        <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3 class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+        </div>
+        <div class="card">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h3 class="card-hedding">Lily Blossom</h3>
+          <h3 class="card-price">20 USD</h3>
+          <button class="card-btn btn-color">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+    <section class="plant-lover">
+      <div class="img-container">
+        <img src="./assets/flower-store.png" class=".Flower-image">
+        <img id="badge" src="./assets/trusted-badge.png" alt="">
+      </div>
+      <div class="item-container">
+        <h2>Flower & Plants <br>Lover</h2>
+        <ul>
+          <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br>roses to
+            exotic
+            blooms, we offer a wide variety <br>of fresh.</li>
+          <li>Indulge your senses with the beauty and <br>fragrance of our fresh flower shop. From classic <br> roses to
+            exotic blooms, we offer a wide variety <br>of fresh.</li>
+          <li>Indulge your senses with the beauty and <br>fragrance of our fresh flower shop. From classic <br>roses to
+            exotic blooms, we offer a wide variety <br>of fresh.</li>
+        </ul>
+      </div>
+    </section>
+    <section class="letest-deal">
+      <h2 class="deal-hedding"><span class="orange">Latest </span>Deals</h2>
+      <p class="deal-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic
+        blooms, we offer a wide variety of fresh.</p>
+    </section>
+   <section class="colorful-bunch-section">
+  <div class="container">
+    <h1>Join the colorful Bunch</h1>
+    <form class="subscribe-form">
+      <input type="email" placeholder="Enter your email" aria-label="Enter your email">
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+</section>
   </main>
+<footer class="main-footer">
+  <div class="footer-container">
+    <div class="footer-left">
+      <div class="footer-logo">
+        <img src="./assets/logo.png" alt="Fauget Flowers Logo"> </div>
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+    </div>
+
+    <div class="footer-links">
+      <div class="footer-column">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Help Center</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-social">
+      <a href="#" class="social-icon linkedin" aria-label="LinkedIn">
+        <img src="./assets/icon-linkedin.png" alt="LinkedIn"> </a>
+      <a href="#" class="social-icon twitter" aria-label="Twitter">
+        <img src="./assets/icon-twitter.png" alt="Twitter"> </a>
+      <a href="#" class="social-icon youtube" aria-label="YouTube">
+        <img src="./assets/icon-youtube.png" alt="YouTube"></a>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
