--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
       </div>
       <div class="image">
-        <img src="./assets/hero-flower.png" alt="Fresh Flowers" />
+        <img class="flowerimage" src="./assets/hero-flower.png" alt="Fresh Flowers" />
       </div>
     </section>
   </header>
