some changes cause image is not working

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
+          <h3 class="card-price">30 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
         </div>
         <div class="card">
@@ -81,20 +81,20 @@
         <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
+          <h3 class="card-price">18 USD</h3>
 
           <button class="card-btn btn-color">ADD TO CART</button>
         </div>
         <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
+          <h3 class="card-price">22 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
         </div>
         <div class="card">
           <img src="./assets/sample-flower-image.png" alt="">
           <h3 class="card-hedding">Lily Blossom</h3>
-          <h3 class="card-price">20 USD</h3>
+          <h3 class="card-price">22 USD</h3>
           <button class="card-btn btn-color">ADD TO CART</button>
         </div>
       </div>
@@ -120,7 +120,7 @@
     <section class="letest-deal">
       <h2 class="deal-hedding"><span class="orange">Latest </span>Deals</h2>
       <p class="deal-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic
-        blooms, we offer a wide variety of fresh.</p>
+        blooms,we offer a wide variety of fresh.</p>
     </section>
    <section class="colorful-bunch-section">
   <div class="container">
@@ -137,7 +137,7 @@
     <div class="footer-left">
       <div class="footer-logo">
         <img src="./assets/logo.png" alt="Fauget Flowers Logo"> </div>
-      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+      <p class="color2">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
     </div>
 
     <div class="footer-links">
